# agent-microexpressions

./: AGENT.md  README.md  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
agent_microexpressions/: __init__.py  aggregator.py  detector.py  encoder.py  signals.py  timeline.py
memory/: JOURNAL.md
src/: worker.ts
tests/: test_aggregator.py  test_detector.py  test_encoder.py  test_signals.py  test_timeline.py
